# mcp-granola

./: .env.example  .gitignore  .mcpbignore  CLAUDE.md  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: build-bundle.yml
src/mcp_granola/: SKILL.md  __init__.py  data.py  models.py  server.py
tests/: conftest.py  test_data.py  test_e2e.py  test_models.py  test_server.py
tests/fixtures/: cache-v3.json  cache-v6.json
